Update Product Catalog and Shopping Cart System

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,10 +6,10 @@
 
 <div class="text-center mb-5">
     <h1 class="display-4">Welcome to Agro Saffron</h1>
-    <p class="lead">Your one-stop destination for beautiful plants</p>
+    <p class="lead">Your one-stop destination for products</p>
 </div>
 
-<h2 class="mb-4">Featured Products</h2>
+@* <h2 class="mb-4">Featured Products</h2>
 
 <div class="row">
     @foreach (var product in Model)
@@ -28,4 +28,4 @@
             </div>
         </div>
     }
-</div>
+</div> *@
