--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
+@inject Agro_Saffron.Services.IShoppingCartService ShoppingCartService
 
 <ul class="navbar-nav">
     @if (SignInManager.IsSignedIn(User))
@@ -9,14 +10,20 @@
             <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
         </li>
         <li class="nav-item">
+            <a class="nav-link text-dark" asp-controller="ShoppingCart" asp-action="Index">
+                <i class="fas fa-shopping-cart"></i> Cart
+                <span class="badge bg-success cart-count">
+                    @{
+                        var cartCount = await ShoppingCartService.GetCartItemsCountAsync();
+                    }
+                    @cartCount
+                </span>
+            </a>
+        </li>
+        <li class="nav-item">
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
                 <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
             </form>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-controller="ShoppingCart" asp-action="Index">
-                🛒 Cart
-            </a>
         </li>
     }
     else
@@ -26,6 +33,17 @@
         </li>
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-dark" asp-controller="ShoppingCart" asp-action="Index">
+                <i class="fas fa-shopping-cart"></i> Cart
+                <span class="badge bg-success cart-count">
+                    @{
+                        var cartCount = await ShoppingCartService.GetCartItemsCountAsync();
+                    }
+                    @cartCount
+                </span>
+            </a>
         </li>
     }
 </ul>
